force-app/main/default/objects/Contact/fields/Contactability_status__c.field-meta.xml
<CustomField>
    <fullName>Contactability_status__c</fullName>
    <description>This field indicates the contactability state of the current contact record:
• Do not contact - if HasOptedOutOfEmail is true AND HasOptedOutOfPhone is true
• Missing contact details - if Email is blank AND Phone are blank
• OK to contact - Otherwise.</description>
    <formula>IF(
   AND(HasOptedOutOfEmail = TRUE, HasOptedOutOfPhone__c = TRUE),
   &quot;Do not contact&quot;,
   IF(
      AND(ISBLANK(Email), ISBLANK(Phone)),
      &quot;Missing contact details&quot;,
      &quot;OK to contact&quot;
   )
)</formula>
    <inlineHelpText>This field indicates if a contact rather or not reachable, or if the email and the phone are missing.</inlineHelpText>
    <label>Contactability status</label>
    <type>Text</type>
</CustomField>