force-app/main/default/objects/Contact/fields/HasOptedOutOfPhone__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasOptedOutOfPhone</label>
    <type>Checkbox</type>
</CustomField>