force-app/main/default/objects/Contact/fields/Normalised_Email__c.field-meta.xml
<CustomField>
    <fullName>Normalised_Email__c</fullName>
    <description>Normalised version of the contact email field to help identify duplicate contacts</description>
    <formula>IF(ISBLANK(Email), NULL, LOWER(Email))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Normalised version of the contact email field to help identify duplicate contacts</inlineHelpText>
    <label>Normalised Email</label>
    <type>Text</type>
</CustomField>