force-app/main/default/objects/Contact/fields/Normalised_Phone__c.field-meta.xml
<CustomField>
    <fullName>Normalised_Phone__c</fullName>
    <description>Normalised version of the contact phone field to help identify duplicate contacts</description>
    <formula>IF(
    ISBLANK(Phone),
    NULL,
    SUBSTITUTE(
        SUBSTITUTE(
        SUBSTITUTE(
        SUBSTITUTE(
        SUBSTITUTE(
        SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),
        &quot;-&quot;,&quot;&quot;),
        &quot;(&quot;,&quot;&quot;),
        &quot;)&quot;,&quot;&quot;),
        &quot;+&quot;,&quot;&quot;),
        &quot;.&quot;,&quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Normalised version of the contact phone field to help identify duplicate contacts</inlineHelpText>
    <label>Normalised Phone</label>
    <type>Text</type>
</CustomField>