force-app/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK(AccountId)),MailingPostalCode  &lt;&gt; Account.ShippingPostalCode)</errorConditionFormula>
    <errorMessage>Error when creating or updating: Please check if the contact is already used or if the email and shipping zip codes</errorMessage>
</ValidationRule>